--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             src="https://code.jquery.com/jquery-3.3.1.js"
             integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
             crossorigin="anonymous"></script>
+    <script src="https://hammerjs.github.io/dist/hammer.js"></script>
 
     <!--https://uat.serversidegraphics.com/PCS/Designer/Hosting/Example.aspx?Handover_Key=689b8821-897b-4c92-9d47-2d9bc76d8e35-->
 </head>
@@ -29,6 +30,15 @@
     </div>
 
 
+    <div id="hammer-container">
+
+    </div>
+
+    <div id="emoji>">
+        <img class="emoij" src="https://cdn.shopify.com/s/files/1/1061/1924/products/Face_With_Rolling_Eyes_Emoji_large.png?v=1481523400" style="width: 70px">
+        <img class="emoij" src="https://www.emojirequest.com/images/CrossEyedEmoji.jpg" style="width: 70px">
+
+    </div>
 
 
 
