--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
 
     </div>
 
+    <buton id="btn-preview" style="border: 1px solid pink">Preview</buton>
+    <div id="preview" style="border: 1px dotted blue; width: 400px; height: 250px; background-repeat: no-repeat; background-size: cover">
+
+    </div>
+
 
 
 <!--<section class="grid-test">-->
